Added in code for database, made model for the parking meter data, added endpoint for retrieving said data, added main entry file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pamaps-backend",
   "version": "1.0.0",
   "description": "The backend for pamaps.org",
-  "main": "app.js",
+  "main": "./src/Main.js",
   "scripts": {
     "test": "npm run test"
   },
